# kiosk-manager

./: CMakeLists.txt  LICENSE  README.md  clear-cache.sh  install.sh
config/: kiosk.conf
src/: cli.cpp  cli.hpp  config.cpp  config.hpp  daemon.cpp  daemon.hpp  main.cpp  web_assets.hpp
systemd/: kiosk-manager.service
